2000-06-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h, FileAccess.cc, FileAccess.h, FileCopy.cc,
	  FileCopy.h, FileSet.h, Filter.cc, Filter.h, Http.cc, Http.h,
	  LocalAccess.cc, Makefile.in, Speedometer.cc, Speedometer.h,
	  buffer.cc, buffer.h, ftpclass.cc, ftpclass.h, misc.cc, misc.h,
	  pgetJob.cc, pgetJob.h, plural.c, plural.h: large file size support.

2000-06-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: apply `;type=' to hftp urls too.
	* MirrorJob.cc: chmod files if needed before continuing download.
	* xmalloc.h: add alloca_strdup2 macro.
	* resource.cc: workaround IRIX CC and Unixware c++ bug by converting
	  array to plain variables. (debugged and workaround proposed by
	  Eugene Exarevsky <zheka@relex.ru>)

2000-06-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: better status line; quote more special symbols.
	* FileCopy.cc: fix positioning in FileCopyPeerFDStream.
	* FindJob.cc: change op in FinderJob_Cmd ctor.
	* Http.cc: don't pass user data as format, use %s.
	* Job.cc: fix kill all.
	* MirrorJob.cc: remove remote directories in reverse mode; fix chmod.

2000-05-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: fix quote-post; fix spurious 'Op not supp' messages and
	  looping.
	* HttpDir.cc: fix symlinks parsing in squid ftp listing.

2000-05-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: implement `quote set-cookie'; don't retry POST op if
	  some data were sent; implement `quote POST path data'.
	* Http.h: (post, post_data) new members.

2000-05-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h, resourse.cc: add http:set-cookies var.
	* xmalloc.cc: (xstrdup) correct spare allocation when str==0.

2000-05-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: remove `-' from default anon password.

2000-05-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: use getaddrinfo only if gethostbyname2 is not available.