@@ -1,3 +1,7 @@
+2000-06-09  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* NetAccess.cc: use 2*rate as default limit-max.
+
 2000-06-08  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* CopyJob.cc, CopyJob.h, FileAccess.cc, FileAccess.h, FileCopy.cc,
